# silly-demos

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE_MIT  README.md  Taskfile.dist.yaml  build-github-pages.sh  build-local.sh  styles.css  wasm-test.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  deploy.yml.backup
react-app/: .env.example  .env.production  .gitignore  README.md  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-app/public/: 404.html
react-app/public/fonts/: .gitignore  firacode.css
react-app/src/: App.tsx  config.ts  main.tsx  styles.css  types.d.ts
react-app/src/demos/: BoidsDemo.tsx  CircleCollisionDemo.tsx  PointLineDemo.tsx  VoronoiDemo.tsx
src/: boids.rs  collision.rs  geometry.rs  lib.rs  rand.rs  vec2.rs  voronoi.rs
