[package]
name = "silly-demos"
version = "0.1.0"
description = "Miscellaneous code demos with a web UI"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
repository = "https://github.com/sunsided/silly-demos"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.104"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
opt-level = "s"
lto = "fat"
